--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -1,12 +1,12 @@
-name: 'Terraform QA PR Workflow'
+name: 'Terraform QA MySQL PR Workflow'
 on:
   pull_request:
     paths:
-    - 'non-prod/us-east-1/qa/**'
+    - 'non-prod/us-east-1/qa/mysql'
 env:
   tf_version: '0.12.29'
   tg_version: 'latest'
-  tf_working_dir: './non-prod/us-east-1/qa'
+  tf_working_dir: './non-prod/us-east-1/qa/mysql'
 jobs:
   terragrunt:
     name: 'Terragrunt'
@@ -30,7 +30,8 @@ jobs:
         with:
           tf_actions_version: ${{ env.tf_version }}
           tg_actions_version: ${{ env.tg_version }}
-          tf_actions_subcommand: 'validate-all'
+          tf_actions_binary: 'terraform'
+          tf_actions_subcommand: 'validate'
           tf_actions_working_dir: ${{ env.tf_working_dir }}
           tf_actions_comment: true
         env:
@@ -40,7 +41,7 @@ jobs:
         with:
           tf_actions_version: ${{ env.tf_version }}
           tg_actions_version: ${{ env.tg_version }}
-          tf_actions_subcommand: 'plan-all'
+          tf_actions_subcommand: 'plan'
           tf_actions_working_dir: ${{ env.tf_working_dir }}
           tf_actions_comment: true
         env:
